# drone-game

./: .gitignore  .gitmodules  README.md  icon.svg.import  project.godot  test_level.gd  test_level.tscn
block_entities/iron_ore/: material.tres  model.obj.import
central_tower/: central_tower.gd  central_tower.gd.uid  central_tower.tscn  model.obj.import
drone/: drone.gd  drone.gd.uid  drone.tscn  model.obj.import
gltf/: drone.glb.import
images/: atlas.png.import
js/: simple.js
level/: blocks.png.import  blocks.xcf  camera.gd  level.gd  level.gd.uid  level.tscn  multimesh_controller.gd  multimesh_controller.gd.uid  query.gd  query.gd.uid
level/chunk/: chunk.gd  chunk.gd.uid  chunk.tscn
level/pause/: pause.gd  pause.gd.uid  pause.tscn
level/test/: arg_line.tscn  camera.gd  camera.gd.uid  drone_edit.gd  drone_edit.gd.uid  test_scene.gd  test_scene.gd.uid  test_scene.tscn
rust/: drone.json  justfile  run.bash  run.bat
rust/gltf-gen/: Cargo.toml
rust/gltf-gen/src/: gltf.rs  indexes.rs  main.rs  meshgen.rs  othergen.rs  parse.rs
rust/wasm/: Cargo.toml  Makefile.toml  justfile
rust/wasm/.cargo/: config.toml
rust/wasm/drone-core/: Cargo.toml
rust/wasm/drone-core/src/: extern_binds.rs  lib.rs
rust/wasm/drone/drone-js/: Cargo.toml
rust/wasm/drone/drone-js/src/: executor.rs  level.rs  lib.rs  module.rs  util.rs
rust/wasm/drone/drone-js/src/level/: block_entity.rs  chunk.rs  mod.rs
rust/wasm/drone/drone-js/src/level/block_entity/: central_tower.rs  drone.rs  iron_ore.rs  mod.rs
rust/wasm/drone/drone-test-simple/: Cargo.toml
rust/wasm/drone/drone-test-simple/src/: lib.rs
rust/wasm/level-controller/: Cargo.toml
rust/wasm/level-controller/src/: blocks.rs  drone.rs  lib.rs  meshgen.rs  pubsub.rs  tests.rs
rust/wasm/level/level-controller/: Cargo.toml
rust/wasm/level/level-controller/src/: entity.rs  lib.rs  process_export.rs  render.rs  update.rs  util.rs
rust/wasm/level/level-gen/: Cargo.toml
rust/wasm/level/level-gen/src/: lib.rs
rust/wasm/level/level-query/: Cargo.toml
rust/wasm/level/level-query/src/: lib.rs
rust/wasm/level/level-state/: Cargo.toml
rust/wasm/level/level-state/src/: block.rs  drone.rs  entity.rs  item.rs  lib.rs
rust/wasm/test-drone/: Cargo.toml
rust/wasm/test-drone/src/: lib.rs
rust/wasm/util/: Cargo.toml  build.rs
rust/wasm/util/log-util/: Cargo.toml
rust/wasm/util/log-util/src/: lib.rs
rust/wasm/util/src/: buffer.rs  getrandom.rs  lib.rs  log.rs  pubsub.rs
wasm/: drone_js.wasm.import  drone_test_simple.wasm.import  level_controller.wasm.import  level_gen.wasm.import  level_query.wasm.import  test_drone.wasm.import
