[workspace]
resolver = "3"
members = [
  "level/*",
  "util",
  "drone/*",
]

[workspace.package]
edition = "2024"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[workspace.dependencies]
arrayvec = "^0.7"
boa_engine = "^0.20"
boa_gc = "^0.20"
boa_runtime = "^0.20"
getrandom = "^0.3"
glam = "^0.30"
hashbrown = "^0.15"
rand = "^0.9"
rand_xoshiro = "^0.7"
uuid = "^1"

level-state.path = "level/level-state"
util-wasm.path = "util"

[workspace.dependencies.rkyv]
version = "0.8"
features = [
  "aligned",
  "little_endian",
  "pointer_width_32",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
debug-assertions = false
overflow-checks = false
