[package]
name = "test-drone"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = { version = "0.3", features = ["sink"] }
drone-core = { path = "../drone-core" }
