[package]
name = "drone-js"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arrayvec.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
boa_runtime.workspace = true
rkyv.workspace = true
uuid.workspace = true

level-state.workspace = true

[dependencies.util-wasm]
workspace = true
features = [
  "buffer",
  "buffer-large",
]
