[package]
name = "level-controller"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
enumflags2.workspace = true
glam.workspace = true
hashbrown.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
rkyv.workspace = true
uuid.workspace = true

level-state.workspace = true

[dependencies.util-wasm]
workspace = true
features = [
  "buffer",
  "buffer-large",
  "getrandom",
]
