[package]
name = "level-gen"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
glam.workspace = true
rkyv.workspace = true

level-state.workspace = true

[dependencies.util-wasm]
workspace = true
features = [
  "buffer",
]
