[package]
name = "level-state"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hashbrown.workspace = true

[dependencies.rkyv]
workspace = true
features = [
  "hashbrown-0_15",
  "uuid-1",
]

[dependencies.uuid]
workspace = true
features = [
  "rng-getrandom",
  "v4",
]

[dependencies.util-wasm]
workspace = true
features = [
  "getrandom",
]
